fix hero images cut off

--- a/assets/newstyle.css
+++ b/assets/newstyle.css
@@ -42,9 +42,8 @@
 
 .main__slider img {
   width: 100%;
-  height: 500px;
-  object-fit: cover;
-  object-position: center top;
+  height: auto;
+  display: block;
 }
 
 .main__slider button {
